Fix overlap

--- a/src/content/cases/Cases.css
+++ b/src/content/cases/Cases.css
@@ -4,6 +4,7 @@
     width: 100%;
     top: 70vh;
     background: white;
+    padding-bottom: 3em;
 }
 
 .cases
